packages/rust/holy/tests/fail/04-sanitize-enum.stderr
error: Sanitize macro only supports structs
 --> tests/fail/04-sanitize-enum.rs:4:1
  |
4 | / enum Nope {
5 | |     A,
6 | |     B,
7 | | }
  | |_^
